<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10sp"
    android:orientation="vertical"
    tools:context="com.example.languageapp.activities.RegisterActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/rback"
            android:layout_width="35sp"
            android:layout_height="35sp"
            android:layout_marginLeft="5sp"
            android:src="@drawable/arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/textline"
            android:text="                                                                                                              " />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="0sp"
        android:layout_marginRight="15sp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginTop="25sp"
            android:background="@drawable/etstyle"
            android:hint="@string/name"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="8sp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginTop="25dp"
            android:background="@drawable/etstyle"
            android:hint="@string/username"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="8sp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginTop="25sp"
            android:background="@drawable/etstyle"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="8sp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/cnfrmpassword"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginTop="25sp"
            android:background="@drawable/etstyle"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="8dp"
            android:singleLine="true" />

        <CheckBox
            android:id="@+id/rshowPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:paddingLeft="8sp"
            android:text="@string/show_password"
            android:textSize="15sp" />

        <Button
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25sp"
            android:background="@drawable/btnstylesel"
            android:clickable="true"
            android:onClick="signinBtn"
            android:text="@string/sign_in"
            android:textColor="#fff" />

    </LinearLayout>

</LinearLayout>
