<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp"
    android:orientation="vertical"
    tools:context="com.example.languageapp.activities.RegisterActivity">

    <LinearLayout
        android:id="@+id/rlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:text="@string/log_in_app"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="34sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/luser"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/etstyle"
            android:hint="@string/username"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="8dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/lpass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/etstyle"
            android:hint="Password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="8dp"
            android:singleLine="true" />

        <CheckBox
            android:id="@+id/showPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:minHeight="48dp"
            android:paddingLeft="8dp"
            android:text="@string/show_password"
            android:textSize="15dp" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/btnstylesel"
            android:clickable="true"
            android:text="Log In"
            android:textColor="#fff" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/rlay"
        android:clickable="true"
        android:minHeight="48dp"
        android:orientation="vertical"
        tools:ignore="SpeakableTextPresentCheck">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/textline"
            android:text="                                                                                                              "
            android:textAlignment="center" />


        <TextView
            android:id="@+id/regis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:paddingTop="8dp"
            android:text="@string/don_t_have_account_sign_up"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>
